--- a/pages/wxml/index.wxss
+++ b/pages/wxml/index.wxss
@@ -1,1 +1,21 @@
 /* pages/wxml/index.wxss */
+
+view{ 
+  color: blue
+}
+
+.ele{
+  color: red
+}
+
+#ele{ 
+  color: pink
+}
+
+view#ele{
+  color: orange
+}
+
+view.ele{
+  color: green
+}
